5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1880_3135.log
== TEST (2019-07-03 14:42:40) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = sum(vet) / vet ** 2
print(round(media, 1)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:43:00) 
-- CODE:
from numpy import *
vet = array(eval(float(input("numeros reais positivos: ")))
media = sum(vet) / vet ** 2
print(round(media, 1)
-- ERROR:
File "XXXX", line 3
    media = sum(vet) / vet ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:43:17) 
-- CODE:
from numpy import *
vet = array(eval(float(input("numeros reais positivos: ")))
media = sum(vet) // vet ** 2
print(round(media, 1)
-- ERROR:
File "XXXX", line 3
    media = sum(vet) // vet ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:43:24) 
-- CODE:
from numpy import *
vet = array(eval(float(input("numeros reais positivos: ")))
media = sum(vet) // vet ** 2
print(round(media, 1)
-- EXECUTION TIME:
0.699171
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 3
    media = sum(vet) // vet ** 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:04:47) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = sum(vet) / size(vet) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = sum(vet) / size(vet) ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:05:11) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = sum(vet[0]) / size(vet) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = sum(vet[0]) / size(vet) ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:05:29) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = 
print(round(media, 2)
-- EXECUTION TIME:
0.630373
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 3
    media = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:07:27) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (sum(vet) // size(vet)) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = (sum(vet) // size(vet)) ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:07:33) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (sum(vet) // size(vet)) ** 2
print(round(media, 2)
-- EXECUTION TIME:
0.593114
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 3
    media = (sum(vet) // size(vet)) ** 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:09:27) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (sum(vet) / vet) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = (sum(vet) / vet) ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:09:31) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (sum(vet) / vet) ** 2
print(round(media, 2)
-- EXECUTION TIME:
0.91945
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 3
    media = (sum(vet) / vet) ** 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:11:30) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (sum(vet) ** 0,5 / vet)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = (sum(vet) ** 0,5 / vet)**2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:11:50) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (sum(vet)**1/2 / vet)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = (sum(vet)**1/2 / vet)**2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:12:57) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = 
print(round(media, 2)
-- EXECUTION TIME:
0.808182
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 3
    media = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:30:09) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (vet[0]**1/2 // size(vet)) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = (vet[0]**1/2 // size(vet)) ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:30:39) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (vet[0]**0,5 // size(vet)) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = (vet[0]**0,5 // size(vet)) ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:31:07) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = (vet[i]**0,5 // size(vet)) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 3
    media = (vet[i]**0,5 // size(vet)) ** 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:31:37) 
-- CODE:
from numpy import *
vet = array(float(eval(input("numeros reais positivos: ")))
media = 
print(round(media, 2)
-- EXECUTION TIME:
0.781654
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 3
    media = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:01) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) / n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:11) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) / n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:34:16) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) / n)**2
print(round(media, 2)
-- EXECUTION TIME:
0.735416
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:19) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) / n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:34:24) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) / n)**2
print(round(media, 2)
-- EXECUTION TIME:
0.717727
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:33) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
n = 4
media = (sum(vet) / n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:46) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
n = 4
media = (sum(vet) / n)**2
print(round(media, 2)
		
		
		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:48) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
n = 4
media = (sum(vet) / n)**2
print(round(media, 2)
		
		
		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:48) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
n = 4
media = (sum(vet) / n)**2
print(round(media, 2)
		
		
		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:48) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
n = 4
media = (sum(vet) / n)**2
print(round(media, 2)
		
		
		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:49) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
n = 4
media = (sum(vet) / n)**2
print(round(media, 2)
		
		
		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:55) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
n = 4
media = (sum(vet) / n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:31) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:32) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:32) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:32) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:32) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:33) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:35:36) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- EXECUTION TIME:
0.673039
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:40) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:50) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:37:17) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:37:19) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:37:23) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
1.50747
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:37:23) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (sum(vet) // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
1.90177
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:39:29) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[i] // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:39:54) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[i] // n)**2
print(round(media, 2)
-- EXECUTION TIME:
0.583446
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:28) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[0]**1/2 // n)**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:13) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:43) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:44) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:44) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:44) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:44) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:57) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
1.14732
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:58) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
2.52778
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:58) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
2.88194
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:58) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
4.87953
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:58) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
5.80863
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:58) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
i = 0
media = (vet[0]**1/2 + vet[1]**1/2 // size(vet))**2
print(round(media, 2)
-- EXECUTION TIME:
5.79172
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:48:49) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (vet[0]**1/2 + vet[1]**1/2 + vet[2]**1/2 + vet[3]**1/2 // n) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:48:54) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (vet[0]**1/2 + vet[1]**1/2 + vet[2]**1/2 + vet[3]**1/2 // n) ** 2
print(round(media, 2)
-- EXECUTION TIME:
0.736798
-- ERROR:
  File "/home/codebench/codes/1880/3135/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:49:20) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (vet[0]**1/2 + vet[1]**1/2 + vet[2]**1/2 + vet[3]**1/2 // size(vet)) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:49:32) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (vet[0]**1/2 + vet[1]**1/2 + vet[2]**1/2 + vet[3]**1/2 // size(vet)) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:49:39) 
-- CODE:
from numpy import *
vet = array(eval(input("numeros reais positivos: ")))
media = (vet[0]**1/2 + vet[1]**1/2 + vet[2]**1/2 + vet[3]**1/2 // size(vet)) ** 2
print(round(media, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
